Fix banner visibility with proper margins

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 
 .banner {
 	background-color: #d4e9f7;
-	padding: 0.75em 1em;
-	margin: -1em -1em 2em -1em;
+	padding: 1em;
+	margin-bottom: 2em;
 	text-align: center;
 	border-radius: 4px;
+	color: #333;
 }
 
 #profile_pic {
